// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={false}
  onOpen={[MockFunction]}
  open={true}
  renderForm={[Function]}
  stepNumber={1}
  stepTitle="onboarding.tutorial.with.jenkins.pipeline.title"
/>
`;

exports[`should render correctly: content 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "option",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.pipeline.step2"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.pipeline.step3.definition"
          />
        </li>
        <li>
          <SentenceWithHighlights
            highlightKeys={
              [
                "label",
                "branches_to_build",
              ]
            }
            translationKey="onboarding.tutorial.with.jenkins.pipeline.step3.scm"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: gitlab content 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.pipeline.step1"
      />
    </li>
    <li>
      <React.Fragment>
        <SentenceWithHighlights
          highlightKeys={
            [
              "tab",
              "option",
            ]
          }
          translationKey="onboarding.tutorial.with.jenkins.pipeline.gitlab.step2.trigger"
        />
        <ul
          className="list-styled"
        >
          <li>
            <SentenceWithHighlights
              highlightKeys={
                [
                  "triggers",
                  "push_events",
                ]
              }
              translationKey="onboarding.tutorial.with.jenkins.pipeline.gitlab.step2.pick_triggers"
            />
          </li>
          <li>
            <SentenceWithHighlights
              highlightKeys={
                [
                  "advanced",
                ]
              }
              translationKey="onboarding.tutorial.with.jenkins.pipeline.gitlab.step2.click_advanced"
            />
          </li>
          <li>
            <SentenceWithHighlights
              highlightKeys={
                [
                  "secret_token",
                  "generate",
                ]
              }
              translationKey="onboarding.tutorial.with.jenkins.pipeline.gitlab.step2.secret_token"
            />
          </li>
        </ul>
      </React.Fragment>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.pipeline.step3.definition"
          />
        </li>
        <li>
          <SentenceWithHighlights
            highlightKeys={
              [
                "label",
                "branches_to_build",
              ]
            }
            translationKey="onboarding.tutorial.with.jenkins.pipeline.step3.scm"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;
